--- a/MyVet.web/Views/Managers/Index.cshtml
+++ b/MyVet.web/Views/Managers/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<MyVet.web.Data.Entities.Owner>
+﻿@model IEnumerable<MyVet.web.Data.Entities.Manager>
 
 @{
     ViewData["Title"] = "Index";
